# LED-Reminder

./: .gitignore  CMakeLists.txt  README.md  demo_settings.txt  generateSettingsHeader.py  partitions.csv  settings.txt
main/: CMakeLists-idf-5.3.2.txt  CMakeLists.txt  Kconfig.projbuild  blink.c  blink.h  buttons.c  buttons.h  config_handler.c  config_handler.h  gpio_config.c  gpio_config.h  led_utils.c  led_utils.h  msc_utils.c  msc_utils.h  parse.c  parse.h  repl.c  repl.h  settings.c  settings.h  time_utils.c  time_utils.h  tusb_msc_main.c  wifi_utils.c  wifi_utils.h
